// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hamburger should render with active styles when passed the isActive prop 1`] = `
.circuit-4 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  background: none;
  border: 1px solid #D8DDE1;
  border-radius: 50%;
  position: relative;
}

.circuit-2 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0 {
  top: 50%;
  width: 12px;
  -webkit-transform: rotate(225deg);
  -ms-transform: rotate(225deg);
  transform: rotate(225deg);
}

.circuit-0,
.circuit-0::after,
.circuit-0::before {
  background-color: #212933;
  border-radius: 1px;
  display: block;
  height: 1px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,-webkit-transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
}

.circuit-0::before,
.circuit-0::after {
  top: 0;
  content: '';
}

.circuit-0::before {
  -webkit-transform: translateY(calc((4px) * -1));
  -ms-transform: translateY(calc((4px) * -1));
  transform: translateY(calc((4px) * -1));
  width: 12px;
}

.circuit-0::after {
  -webkit-transform: translateY(calc(4px));
  -ms-transform: translateY(calc(4px));
  transform: translateY(calc(4px));
  width: 12px;
}

.circuit-0,
.circuit-0::before,
.circuit-0::after {
  -webkit-transition: width 0.2s ease-out,opacity 0.1s ease-out 0.15s,-webkit-transform 0.3s cubic-bezier(0.215,0.61,0.355,1) 0.15s;
  -webkit-transition: width 0.2s ease-out,opacity 0.1s ease-out 0.15s,transform 0.3s cubic-bezier(0.215,0.61,0.355,1) 0.15s;
  transition: width 0.2s ease-out,opacity 0.1s ease-out 0.15s,transform 0.3s cubic-bezier(0.215,0.61,0.355,1) 0.15s;
  width: 12px;
}

.circuit-0::before {
  opacity: 0;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.circuit-0::after {
  -webkit-transform: translateY(0) rotate(-90deg);
  -ms-transform: translateY(0) rotate(-90deg);
  transform: translateY(0) rotate(-90deg);
}

<button
  className="circuit-4 circuit-5"
  onClick={[Function]}
>
  <span
    className="circuit-0 circuit-1"
  />
  <span
    className="circuit-2 circuit-3"
  >
    Close menu
  </span>
</button>
`;

exports[`Hamburger should render with default styles 1`] = `
.circuit-4 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  background: none;
  border: 1px solid #D8DDE1;
  border-radius: 50%;
  position: relative;
}

.circuit-0 {
  top: 50%;
  width: 12px;
}

.circuit-0,
.circuit-0::after,
.circuit-0::before {
  background-color: #212933;
  border-radius: 1px;
  display: block;
  height: 1px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,-webkit-transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
}

.circuit-0::before,
.circuit-0::after {
  top: 0;
  content: '';
}

.circuit-0::before {
  -webkit-transform: translateY(calc((4px) * -1));
  -ms-transform: translateY(calc((4px) * -1));
  transform: translateY(calc((4px) * -1));
  width: 12px;
}

.circuit-0::after {
  -webkit-transform: translateY(calc(4px));
  -ms-transform: translateY(calc(4px));
  transform: translateY(calc(4px));
  width: 12px;
}

.circuit-2 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<button
  className="circuit-4 circuit-5"
  onClick={[Function]}
>
  <span
    className="circuit-0 circuit-1"
  />
  <span
    className="circuit-2 circuit-3"
  >
    Open menu
  </span>
</button>
`;
